@@ -131,7 +131,7 @@ public class SaveAssessmentSettings
     	if ("1".equals(nav)) {
     		assessmentSettings.setAssessmentFormat("1");
     	}
-    	control.setItemNavigation(new Integer(nav));
+    	control.setItemNavigation(Integer.valueOf(nav));
     }
     if (assessmentSettings.getItemNumbering()!=null)
       control.setItemNumbering(new Integer(assessmentSettings.getItemNumbering()));
@@ -145,20 +145,26 @@ public class SaveAssessmentSettings
     }
 
     // d. set Submissions
-    if (assessmentSettings.getUnlimitedSubmissions()!=null){
-      if (!assessmentSettings.getUnlimitedSubmissions().
-          equals(AssessmentAccessControlIfc.UNLIMITED_SUBMISSIONS.toString())) {
-        control.setUnlimitedSubmissions(Boolean.FALSE);
-        if (assessmentSettings.getSubmissionsAllowed() != null)
-          control.setSubmissionsAllowed(new Integer(assessmentSettings.
-              getSubmissionsAllowed()));
-        else
-          control.setSubmissionsAllowed(new Integer("1"));
-      }
-      else {
-        control.setUnlimitedSubmissions(Boolean.TRUE);
-        control.setSubmissionsAllowed(null);
-      }
+    if (control.getItemNavigation() != null && control.getItemNavigation().equals(Integer.valueOf(1))) {
+    	control.setUnlimitedSubmissions(Boolean.FALSE);
+    	control.setSubmissionsAllowed(Integer.valueOf("1"));
+    }
+    else {
+    	if (assessmentSettings.getUnlimitedSubmissions()!=null){
+    		if (!assessmentSettings.getUnlimitedSubmissions().
+    				equals(AssessmentAccessControlIfc.UNLIMITED_SUBMISSIONS.toString())) {
+    			control.setUnlimitedSubmissions(Boolean.FALSE);
+    			if (assessmentSettings.getSubmissionsAllowed() != null)
+    				control.setSubmissionsAllowed(new Integer(assessmentSettings.
+    						getSubmissionsAllowed()));
+    			else
+    				control.setSubmissionsAllowed(Integer.valueOf("1"));
+    		}
+    		else {
+    			control.setUnlimitedSubmissions(Boolean.TRUE);
+    			control.setSubmissionsAllowed(null);
+    		}
+    	}
     }
     //log.info("**unlimited submission="+assessmentSettings.getUnlimitedSubmissions());
     //log.info("**allowed="+control.getSubmissionsAllowed());
